# coingecko-graphql

./: .env  .gitignore  Cargo.toml  Readme.md  docker-compose.yaml
.github/workflows/: general-rust-ci.yml
.sqlx/: query-2620f13e46dcb0f080d570aeb17aaf9383e454bf45cd025fc237afe36021c302.json
migrations/: 20231015100832_create_price_info_table.sql
src/: api_calls.rs  db_operations.rs  dto.rs  get_current_price.rs  get_list_of_currencies.rs  graphql.rs  http_get.rs  lib.rs  main.rs  services.rs
src/api_calls/: get_current_price.rs  get_historical_price.rs  get_list_of_currencies.rs
src/db_operations/: get_all_prices.rs  get_latest_price_from_12_min.rs  get_latest_price_from_5_min.rs  insert_prices.rs
src/dto/: current_price_dto.rs  historical_price_dto.rs
src/services/: current_price_subscription_service.rs  get_crypto_ids_service.rs  get_current_price_service.rs  get_historical_data_service.rs  symbol_cache_service.rs
