[package]
name = "coingecko_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.7"
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6.20"
async-graphql-axum = "6.0.7"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.20"
dotenvy = "0.15.7"
serde = "1.0.189"
serde_json = "1.0.107"
env_logger = "0.10.0"