[package]
name = "coingecko_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "6.0.7", features = ["time","bigdecimal"]}
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6.20"
async-graphql-axum = "6.0.7"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.20"
dotenvy = "0.15.7"
serde = "1.0.189"
serde_json = "1.0.107"
env_logger = "0.10.0"
time = {version ="0.3.30", features = ["formatting"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres","bigdecimal","time" ] }
anyhow = "1.0"
futures-core = "0.3.28"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
async-trait = "0.1.74"
mockall = "0.11.4"